# LinearMPC

./: .gitignore  README.md
KF/: KF.ino
cpp/linear_mpc/: CMakeLists.txt  package.xml
cpp/linear_mpc/include/linear_mpc/: linear_mpc.h  matrix_algebra.h
cpp/linear_mpc/src/: linear_mpc.cpp  linear_mpc_example.cpp
cpp/linear_mpc/test/: CMakeLists.txt
cpp/linear_mpc/test/unit/: CMakeLists.txt  linear_drone.h  test_linear_mpc.cpp
matlab/: LinearMPC.m  droneSetup.m  linearMPCSetup.m  linear_ballbot.m  linear_full_drone.m  linear_full_drone.m~  linear_translation_drone.m  linear_translation_drone.m~  test_solvers.m  tumbller_hardware.m
matlab/OSQP/osqp/osqp-0.3.0-matlab-mac64/: osqp_mex.mexmaci64
matlab/drone_sim/: droneDynamics.m  generateReference.m  plotTrajectory.m  sim_driver.m
matlab/sim/ballbot/: ballbotDynamics.m  generateReference.m  model_params.mat  plotResults.m  plotTrajectory.m  simDriver.m  testDynamics.m
matlab/sim/drone/: droneDynamics.m  generateReference.m  plotQuad.m  plotTrajectory.m  simDriver.m
matlab/sim/tumbller/: plotTrajectory.m  simDriver.m  tumbllerDynamics.m
stateEstimation/: CF_KF_Comp.m  Draw_MPC_point_stabilization_v1.m  KKF.m  MHE.m  TumbllerParams.m  exp.avi  meas.mat  shift.m  stateEstimation.m  time.mat
